projetos/local/teste/nexus-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-webapp-route
  namespace: nexus-webapp-teste
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - teste.nexusplatform.com.br
  rules:
  - backendRefs:
    - name: nexus-webapp-service
      port: 80
